Update config.yml and some housekeeping

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+title: growthUX.com - UX and growth hack demos at work
+email: victor@growthux.com
+description: We show UX design trends and growth hack demos on this site.  All work we do is open-sourced.
+baseurl: "/demos" # the subpath of your site, e.g. /blog/
+url: "http://growthux.github.io" # the base hostname & protocol for your site
+twitter_username: growthux
+github_username:  growthux
 
 # Build settings
 markdown: kramdown
+destination: _site
