--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: growthUX.com - UX and growth hack demos at work
+title: growthUX.com
 email: victor@growthux.com
 description: We show UX design trends and growth hack demos on this site.  All work we do is open-sourced.
 baseurl: "" # the subpath of your site, e.g. /blog/
